TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Fix dependonservice LanManWorkStation (old win)
 * Fix RtlStringFromGUID problem on NT4

2012-07-31 MickeM
 * Fixed issue with files not copied by default build
 * Swapped graphite client to use UTC instead of local time

2012-07-30 MickeM
 * Restructured settings a bit removing dead code
 * Added nscp settings --validate to validate a given settings file listing all invalid (unregistered) keys.
 * Added SamplePluginSimple which currently is not very rich but at least has some comments to explain some of the things.

2012-07-29 MickeM
 * Tracked down a few memoryleaks when connections time-out.
 * Added testcases for connection timeouts in lua NRPE test suite
 * Improved the LUA module a bit

2012-07-26 MickeM
 * Fixed some memoryelaks in LUAModule
 * Extracted the test functions into a library
 * Added lib folder as search path for lua scripts
 * Tweaks and improvments all around
 * Improved the build scripts a lot making files work on linux (still need to manually build the targets though)

2012-07-23 MickeM
 * Added support for LUAScripts to linux enviornments (still a few warnings to sort out)
 * Improved lua unit test scripts
 * Added support for using member functions as handlers in Lua scripts

2012-07-17 MickeM
 * Performance enhancements to build time

2012-07-11 MickeM
 * LUAScript: Improved lua scripting module a lot
 * LUAScript: Added protocol buffer support to lua scripts
 * tests: Rewrote (halfway there) test_nrpe python script as a lua script.
 * CheckEventLog: Fixed command name when submitting real-time "no action checks"

2012-06-18 MickeM
 * Fixed issue with parsing in test mode
 * Fixed Graphite client using wrong time for datestamp
 * Added so debug NSCA logs host name

2012-06-16 MickeM
 * Initial (rather crude) NRDP support.

2012-06-16 MickeM
 * Merged in master branch