@@ -120,13 +120,23 @@ ENDIF (PYTHONLIBSEX_FOUND)
 FIND_PACKAGE(TINYXML2)
 IF (TINYXML2_FOUND)
 	MESSAGE(STATUS "Found tinyxml2 in: ${TINYXML2_INCLUDE_DIR}")
-ENDIF (TINYXML2_FOUND)
+ELSE(TINYXML2_FOUND)
+	MESSAGE(STATUS "Tinyxml was not found: NRDP will not be built!")
+ENDIF(TINYXML2_FOUND)
 
 FIND_PACKAGE(ZeroMQ)
 IF (ZEROMQ_FOUND)
 	MESSAGE(STATUS "Found zeromq (lib) in: ${ZEROMQ_LIBRARY}")
 ENDIF (ZEROMQ_FOUND)
 
+FIND_PACKAGE(CryptoPP)
+IF (CRYPTOPP_FOUND)
+	IF(CRYPTOPP_IS_LIB)
+		MESSAGE(STATUS "Found library crypto++ in: ${CRYPTOPP_INCLUDE_DIR}")
+	ELSE(CRYPTOPP_IS_LIB)
+		MESSAGE(STATUS "Found sources crypto++ in: ${CRYPTOPP_INCLUDE_DIR} (will build library)")
+	ENDIF(CRYPTOPP_IS_LIB)
+ENDIF (CRYPTOPP_FOUND)
 
 FIND_PACKAGE(GoogleProtoBuf)
 if(PROTOBUF_FOUND)
