@@ -1,102 +1,69 @@
 cmake_minimum_required(VERSION 2.6)
 
-IF (HAVE_CRYPTOPP)
-	MESSAGE(STATUS "Found CACHED Crypto++ in ${CRYPTOPP_SOURCE_DIR}")
-ELSE (HAVE_CRYPTOPP)
-	FIND_PATH(CRYPTOPP_SOURCE_DIR cryptlib.h ${CRYPTOPP_DIR})
-	
-	IF (CRYPTOPP_SOURCE_DIR)
-		MESSAGE(STATUS "Found Crypto++ in ${CRYPTOPP_SOURCE_DIR}")
-		SET(HAVE_CRYPTOPP TRUE PARENT_SCOPE)
-		SET(HAVE_CRYPTOPP TRUE)
-	ELSE (CRYPTOPP_SOURCE_DIR)
-		MESSAGE(STATUS "Crypto++ was not found in ${CRYPTOPP_SOURCE_DIR} (CRYPTOPP_SOURCE_DIR)")
-	ENDIF (CRYPTOPP_SOURCE_DIR)
-
-ENDIF (HAVE_CRYPTOPP)
-
 SET(CRYPTOS des rijndael cast tea 3way blowfish twofish rc2 arc4 serpent gost )
 
-IF (HAVE_CRYPTOPP)
-
-	FOREACH(CRYPTO ${CRYPTOS})
-		LIST(APPEND cryptopp_SOURCES ${CRYPTOPP_SOURCE_DIR}/${CRYPTO}.cpp)
+IF (CRYPTOPP_FOUND)
+	IF(CRYPTOPP_IS_LIB)
+		MESSAGE(STATUS "   - Using Crypto++ library")
+	
+		LIST(APPEND cryptopp_SOURCES cryptopp.cpp)
 		IF (WIN32)
-			LIST(APPEND cryptopp_SOURCES ${CRYPTOPP_SOURCE_DIR}/${CRYPTO}.h)
+			LIST(APPEND cryptopp_SOURCES ${NSCP_INCLUDEDIR}/cryptopp/cryptopp.hpp)
 		ENDIF (WIN32)
-	ENDFOREACH(CRYPTO ${CRYPTOS})
+		
+	ELSE(CRYPTOPP_IS_LIB)
+		MESSAGE(STATUS "   - Using Crypto++ sources")
 
+		FOREACH(CRYPTO ${CRYPTOS})
+			LIST(APPEND cryptopp_SOURCES ${CRYPTOPP_INCLUDE_DIR}/${CRYPTO}.cpp)
+			IF (WIN32)
+				LIST(APPEND cryptopp_SOURCES ${CRYPTOPP_INCLUDE_DIR}/${CRYPTO}.h)
+			ENDIF (WIN32)
+		ENDFOREACH(CRYPTO ${CRYPTOS})
+		
+		LIST(APPEND cryptopp_SOURCES ${CRYPTOPP_INCLUDE_DIR}/filters.cpp)
+		LIST(APPEND cryptopp_SOURCES ${CRYPTOPP_INCLUDE_DIR}/osrng.cpp)
+		LIST(APPEND cryptopp_SOURCES ${CRYPTOPP_INCLUDE_DIR}/modes.cpp)
+		LIST(APPEND cryptopp_SOURCES ${CRYPTOPP_INCLUDE_DIR}/cryptlib.cpp)
+		LIST(APPEND cryptopp_SOURCES ${CRYPTOPP_INCLUDE_DIR}/misc.cpp)
+		LIST(APPEND cryptopp_SOURCES cryptopp.cpp)
 
-	LIST(APPEND cryptopp_SOURCES ${CRYPTOPP_SOURCE_DIR}/filters.cpp)
-	LIST(APPEND cryptopp_SOURCES ${CRYPTOPP_SOURCE_DIR}/osrng.cpp)
-	LIST(APPEND cryptopp_SOURCES ${CRYPTOPP_SOURCE_DIR}/modes.cpp)
-	LIST(APPEND cryptopp_SOURCES ${CRYPTOPP_SOURCE_DIR}/cryptlib.cpp)
-	LIST(APPEND cryptopp_SOURCES ${CRYPTOPP_SOURCE_DIR}/misc.cpp)
-	LIST(APPEND cryptopp_SOURCES cryptopp.cpp)
+		IF (WIN32)
+			LIST(APPEND cryptopp_SOURCES ${CRYPTOPP_INCLUDE_DIR}/filters.h)
+			LIST(APPEND cryptopp_SOURCES ${CRYPTOPP_INCLUDE_DIR}/osrng.h)
+			LIST(APPEND cryptopp_SOURCES ${CRYPTOPP_INCLUDE_DIR}/modes.h)
+			LIST(APPEND cryptopp_SOURCES ${CRYPTOPP_INCLUDE_DIR}/cryptlib.h)
+			LIST(APPEND cryptopp_SOURCES ${CRYPTOPP_INCLUDE_DIR}/misc.h)
+			LIST(APPEND cryptopp_SOURCES ${NSCP_INCLUDEDIR}/cryptopp/cryptopp.hpp)
+		ENDIF (WIN32)
+		
+	ENDIF(CRYPTOPP_IS_LIB)
 
-	IF (WIN32)
-		LIST(APPEND cryptopp_SOURCES ${CRYPTOPP_SOURCE_DIR}/filters.h)
-		LIST(APPEND cryptopp_SOURCES ${CRYPTOPP_SOURCE_DIR}/osrng.h)
-		LIST(APPEND cryptopp_SOURCES ${CRYPTOPP_SOURCE_DIR}/modes.h)
-		LIST(APPEND cryptopp_SOURCES ${CRYPTOPP_SOURCE_DIR}/cryptlib.h)
-		LIST(APPEND cryptopp_SOURCES ${CRYPTOPP_SOURCE_DIR}/misc.h)
-		LIST(APPEND cryptopp_SOURCES ${NSCP_INCLUDEDIR}/cryptopp/cryptopp.hpp)
-
-	ENDIF (WIN32)
 	IF (MSVC)
-		#	ADD_DEFINITIONS (-DCRYPTOPP_GENERATE_X64_MASM)
-		#	ADD_DEFINITIONS (-DCRYPTOPP_DISABLE_ASM)
-		#	ADD_DEFINITIONS (-DNDEBUG)
 		CMAKE_POLICY(SET CMP0008 NEW)
 		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Oi")
-			
 		IF(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
-			string(REGEX REPLACE "/W[0-4]" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+			STRING(REGEX REPLACE "/W[0-4]" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
 		ENDIF(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
 	ENDIF (MSVC)
 
-	# TODO add asm 		echo $(.source)/x64masm.asm ;
-	#		obj x64masm.obj : $(.source)/x64masm.asm ;
-	#enable_language(ASM_MASM)
-	#if(CMAKE_ASM_MASM_COMPILER_WORKS)
-	#	set(can_use_assembler TRUE)
-	#	SET(cryptopp_SOURCES ${cryptopp_SOURCES}  "${CRYPTOPP_SOURCE_DIR}/x64masm.asm")
-	#else(CMAKE_ASM_MASM_COMPILER_WORKS)
-	#	MESSAGE(WARNING "Failed to find mnasm")
-	#endif(CMAKE_ASM_MASM_COMPILER_WORKS)
 	IF (WIN32)
-		ADD_DEFINITIONS (-DCRYPTOPP_DISABLE_ASM -DUNICODE  -D_UNICODE)
+		ADD_DEFINITIONS (-DCRYPTOPP_DISABLE_ASM -DUNICODE -D_UNICODE)
 	ENDIF (WIN32)
 	
-	INCLUDE_DIRECTORIES(${NSCP_INCLUDEDIR})
+	INCLUDE_DIRECTORIES(${CRYPTOPP_INCLUDE_DIR})
 
-	#ADD_LIBRARY (cryptopp SHARED ${cryptopp_SOURCES})
-	#SET_TARGET_PROPERTIES(cryptopp PROPERTIES FOLDER "libraries")
-	#IF(NOT WIN32)
-	MESSAGE(STATUS "===> ${CMAKE_CXX_FLAGS}")
 	ADD_LIBRARY(cryptopp_static STATIC  ${cryptopp_SOURCES})
 	SET_TARGET_PROPERTIES(cryptopp_static PROPERTIES FOLDER "libraries")
 
-	#	SET_TARGET_PROPERTIES(cryptopp_static PROPERTIES OUTPUT_NAME cryptopp)
-	#ENDIF(NOT WIN32)
-
 	IF (WIN32)
-		#TARGET_LINK_LIBRARIES (cryptopp Ws2_32.lib)
 		TARGET_LINK_LIBRARIES (cryptopp_static Ws2_32.lib)
-		# We cannot build static versions of this in windows for some reason
 	ENDIF (WIN32)
 
-	IF(APPLE)
-		#SET_TARGET_PROPERTIES(cryptopp PROPERTIES COMPILE_FLAGS "-fPIC -w -DOSX  -DNDEBUG -finline-functions -O3 -DCRYPTOPP_DISABLE_ASM")
-		SET_TARGET_PROPERTIES(cryptopp_static PROPERTIES COMPILE_FLAGS "-w -DOSX  -DNDEBUG -finline-functions -O3 -DCRYPTOPP_DISABLE_ASM")
-	ELSEIF(UNIX AND NOT APPLE)
-		#SET_TARGET_PROPERTIES(cryptopp PROPERTIES COMPILE_FLAGS "-fPIC -w -pipe -DNDEBUG -DLINUX -finline-functions -O3")
-		SET_TARGET_PROPERTIES(cryptopp_static PROPERTIES COMPILE_FLAGS " -w -pipe -DNDEBUG -DLINUX -finline-functions -O3")
-	ELSEIF(WIN32)
-		IF(NOT MSVC)
-			#SET_TARGET_PROPERTIES(cryptopp PROPERTIES COMPILE_FLAGS "-mthreads -w -finline-functions -O3 -DNDEBUG -D__MINGW__ -DWIN32 -D_WIN32_WINNT=0x0501 -D_WIN32")
-			SET_TARGET_PROPERTIES(cryptopp_static PROPERTIES COMPILE_FLAGS "-mthreads -w -finline-functions -O3 -DNDEBUG -D__MINGW__ -DWIN32 -D_WIN32_WINNT=0x0501 -D_WIN32")
-		ENDIF(NOT MSVC)
-	ENDIF(APPLE)
-ENDIF (HAVE_CRYPTOPP)
+	IF(CMAKE_COMPILER_IS_GNUCXX)
+		IF("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64" AND NOT APPLE)
+			SET_TARGET_PROPERTIES(cryptopp_static PROPERTIES COMPILE_FLAGS -fPIC)
+		ENDIF("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64" AND NOT APPLE)
+	ENDIF(CMAKE_COMPILER_IS_GNUCXX)
+ENDIF(CRYPTOPP_FOUND)
 	
