@@ -14,13 +14,13 @@ SET(SRCS
 	${NSCP_DEF_PLUGIN_CPP}
 )
 
-IF(HAVE_CRYPTOPP)
+IF(CRYPTOPP_FOUND)
 	SET(CRYPTOPP_LIB cryptopp_static)
 	ADD_DEFINITIONS(-DHAVE_LIBCRYPTOPP)
-	INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
-ELSE(HAVE_CRYPTOPP)
-	message(STATUS "WARNING: No libCrypto++ in NSCA Module")
-ENDIF(HAVE_CRYPTOPP)
+	INCLUDE_DIRECTORIES(${CRYPTOPP_INCLUDE_DIR})
+ELSE(CRYPTOPP_FOUND)
+	MESSAGE(STATUS "WARNING: Crypto++ was not found (encryption for NSCA will not be avalible)")
+ENDIF(CRYPTOPP_FOUND)
 
 ADD_DEFINITIONS(${NSCP_GLOBAL_DEFINES})
 
@@ -42,6 +42,8 @@ IF(WIN32)
 ENDIF(WIN32)
 
 add_library(${TARGET} MODULE ${SRCS})
+MESSAGE(STATUS "Libs: ${NSCP_DEF_PLUGIN_LIB}")
+MESSAGE(STATUS "Libs: ${CRYPTOPP_LIB}")
 
 target_link_libraries(${TARGET}
 	${Boost_FILESYSTEM_LIBRARY}
