@@ -14,13 +14,13 @@ SET(SRCS
 	${NSCP_DEF_PLUGIN_CPP}
 )
 
-IF(HAVE_CRYPTOPP)
+IF(CRYPTOPP_FOUND)
 	SET(CRYPTOPP_LIB cryptopp_static)
 	ADD_DEFINITIONS(-DHAVE_LIBCRYPTOPP)
-	INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
-ELSE(HAVE_CRYPTOPP)
-	message(STATUS "WARNING: No libCrypto++ in NSCA Module")
-ENDIF(HAVE_CRYPTOPP)
+	INCLUDE_DIRECTORIES(${CRYPTOPP_INCLUDE_DIR})
+ELSE(CRYPTOPP_FOUND)
+	MESSAGE(STATUS "WARNING: Crypto++ was not found (encryption for NSCA will not be avalible)")
+ENDIF(CRYPTOPP_FOUND)
 
 #IF(OPENSSL_FOUND)
 #	ADD_DEFINITIONS(-DUSE_SSL)
